[tool.poetry]
package-mode = false
name = "python-poetry-sandbox" # Optional when package-mode is false
version = "0.1.0" # Optional when package-mode is false
description = ""
authors = ["Ding Liu <contact@dingliu.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
mypy = "^1.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
